# rust_vectorial_model

./: Cargo.toml  README.md  flake.nix  parameters_rust.yaml  parameters_rust_example.yaml
src/: main.rs  total_fragments_vs_rh.rs  vectorial_model.rs
